--- a/frontend/public/chat.css
+++ b/frontend/public/chat.css
@@ -7,6 +7,11 @@
 }
 
 #chat-container {
+    font-family: 'Arial', sans-serif;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
     position: fixed;
     bottom: 10px;
     right: 10px; 
@@ -21,39 +26,31 @@
 
 /* Message bubble styling */
 .message-bubble, .message-bubble-GPT {
-    margin: 5px 10px;
     padding: 10px;
     border-radius: 18px;
     color: white;
     max-width: 70%;
     word-wrap: break-word;
+    margin-bottom: 10px;
 }
 
 .message-bubble {
     background: linear-gradient(145deg, #6b6a6a, #555555); /* Gradient for user messages */
+    margin-left: auto; /* Aligns user messages to the right */
+    text-align: right; /* Aligns text inside the bubble to the right */
 }
 
 .message-bubble-GPT {
     background: linear-gradient(145deg, #007bff, #0056b3); /* Gradient for GPT messages */
+    margin-right: auto; /* Aligns GPT messages to the left */
+    text-align: left; /* Aligns text inside the bubble to the left */
 }
 
 /* Input area and buttons styling */
-#chat-box {
+#chat-input-container {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     padding: 10px;
-}
-
-#messages {
-    overflow-y: auto;
-    height: 250px; /* Increased height */
-    padding-right: 5px; /* Padding for scrollbar */
-}
-
-#chat-input, #send-btn, #record-btn {
-    height: 40px;
-    border-radius: 20px;
-    transition: all 0.3s ease;
 }
 
 #chat-input {
@@ -61,26 +58,52 @@
     margin-right: 10px;
     background: white;
     border: 2px solid transparent;
+    height: 40px;
+    border-radius: 20px;
+    transition: all 0.3s ease;
 }
 
 #chat-input:focus {
     border-color: #007bff; /* Focus color */
 }
 
-#send-btn, #record-btn {
-    width: 50px;
+#send-btn {
+    width: 60px;
+    height: 40px;
     background: #007bff;
     color: white;
     cursor: pointer;
     border: none;
+    border-radius: 20px;
+    margin-left: 5px; /* Add space between the buttons */
+    transition: background-color 0.3s ease;
 }
 
+#record-btn {
+    width: 60px;
+    height: 40px;
+    background: #556b2f; /* Dark Olive Green */
+    color: #fffff0; /* Ivory */
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    margin-left: 5px;
+    transition: background-color 0.3s ease;
+}
+
+
 #send-btn:hover, #record-btn:hover {
-    background-color: #0056b3; /* Darker on hover */
+    background-color: #0056b3;
 }
 
 #record-btn.pressed {
-    background-color: #ff0000; /* Red when recording */
+    background-color: #ff0000;
+}
+
+/* Messages container styling */
+#messages {
+    overflow-y: auto;
+    height: 250px; /* Increased height */
 }
 
 /* Custom scrollbar for messages */
@@ -95,4 +118,8 @@
 
 #messages::-webkit-scrollbar-track {
     background: transparent;
+}
+
+#download-interaction {
+    z-index: 1000;
 }
